--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
     "primevue": "^4.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.1",
     "tailwindcss-primeui": "^0.3.4",
@@ -94,9 +97,10 @@
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
     "@nx/jest": "20.3.0",
-    "@nx/js": "20.3.0",
+    "@nx/js": "20.4.5",
     "@nx/nest": "20.3.0",
     "@nx/node": "20.3.0",
+    "@nx/react": "20.4.5",
     "@nx/vite": "20.3.0",
     "@nx/vue": "20.3.0",
     "@nx/web": "20.3.0",
@@ -104,16 +108,22 @@
     "@nx/workspace": "20.3.0",
     "@schematics/angular": "~19.0.7",
     "@swc-node/register": "~1.10.9",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.10.18",
     "@swc/helpers": "~0.5.15",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.1.0",
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "22.10.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@typescript-eslint/utils": "^8.24.1",
+    "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.9",
     "@vitest/ui": "^2.1.9",
@@ -122,12 +132,17 @@
     "@vue/test-utils": "^2.4.6",
     "angular-eslint": "^19.1.0",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.17.0",
     "electron": "^33.4.1",
     "electron-builder": "^25.1.8",
     "eslint": "~9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-vue": "^9.32.0",
     "handlebars": "^4.7.8",
     "jest": "^29.7.0",
