Created message bus service and fixed bugs
Authors didn't display in the email template and after purchasing the
cart wasn't cleared

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -171,6 +171,9 @@
       "@e-commerce/client-web/shared/data-access/api-services": [
         "libs/client-web/shared/data-access/api-services/src/index.ts"
       ],
+      "@e-commerce/client-web/shared/data-access/services": [
+        "libs/client-web/shared/data-access/services/src/index.ts"
+      ],
       "@e-commerce/client-web/shared/data-access/signal-store-feature": [
         "libs/client-web/shared/data-access/signal-store-feature/src/index.ts"
       ],
