--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "~4.21.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
+    "nodemailer-express-handlebars": "^7.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
