--- a/apps/delivery-manager/project.json
+++ b/apps/delivery-manager/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/delivery-manager/src",
   "projectType": "application",
-  "tags": [],
+  "tags": ["scope:delivery-manager", "type:app"],
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
