--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@prisma/client": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-query": "4",
     "@tanstack/vue-query": "^5.66.4",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
