--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -207,6 +207,12 @@
       "@e-commerce/delivery-manager/core/feature/nav": [
         "libs/delivery-manager/core/feature/nav/src/index.ts"
       ],
+      "@e-commerce/delivery-manager/orders/feature/order-list": [
+        "libs/delivery-manager/orders/feature/order-list/src/index.ts"
+      ],
+      "@e-commerce/delivery-manager/orders/feature/shell": [
+        "libs/delivery-manager/orders/feature/shell/src/index.ts"
+      ],
       "@e-commerce/delivery-manager/shared/feature": [
         "libs/delivery-manager/shared/feature/src/index.ts"
       ],
