--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/swagger": "^8.1.1",
+    "@nestjs/websockets": "^11.0.11",
     "@ngrx/effects": "19.0.0",
     "@ngrx/eslint-plugin": "19.0.0",
     "@ngrx/operators": "19.0.0",
@@ -70,6 +72,8 @@
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.8.1",
     "vite-plugin-electron": "^0.29.0",
