Add user information to account and order process

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/passport-local": "^1.0.38",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "cally": "^0.8.0",
     "caniuse-lite": "^1.0.30001707",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -66,8 +67,10 @@
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.6",
+    "primereact": "^10.9.4",
     "primevue": "^4.2.5",
     "react": "18.3.1",
+    "react-day-picker": "^9.6.4",
     "react-dom": "18.3.1",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
@@ -143,7 +146,6 @@
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "cypress": "^13.17.0",
-    "daisyui": "^5.0.0",
     "electron": "^33.4.1",
     "electron-builder": "^25.1.8",
     "eslint": "~9.16.0",
