--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.0.7",
-    "@angular/cdk": "^19.1.4",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "~19.0.7",
     "@angular/compiler": "~19.0.7",
     "@angular/core": "~19.0.7",
@@ -20,15 +20,15 @@
     "@angular/router": "~19.0.7",
     "@angular/service-worker": "~19.0.7",
     "@angular/ssr": "~19.0.7",
-    "@nestjs/common": "^10.4.15",
+    "@nestjs/common": "^10.4.19",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.15",
+    "@nestjs/core": "^10.4.19",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/platform-socket.io": "^11.0.11",
+    "@nestjs/platform-express": "^10.4.19",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^8.1.1",
-    "@nestjs/websockets": "^11.0.11",
+    "@nestjs/websockets": "^11.1.3",
     "@ngrx/effects": "19.0.0",
     "@ngrx/eslint-plugin": "19.0.0",
     "@ngrx/operators": "19.0.0",
@@ -37,24 +37,24 @@
     "@ngrx/store-devtools": "19.0.0",
     "@nx/angular": "20.3.0",
     "@primeng/themes": "19.0.0",
-    "@primevue/forms": "^4.3.4",
-    "@primevue/themes": "^4.3.4",
-    "@prisma/client": "^6.5.0",
-    "@supabase/supabase-js": "^2.48.1",
+    "@primevue/forms": "^4.3.6",
+    "@primevue/themes": "^4.3.6",
+    "@prisma/client": "^6.11.1",
+    "@supabase/supabase-js": "^2.50.3",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query": "4",
-    "@tanstack/vue-query": "^5.66.4",
+    "@tanstack/react-query": "^4.40.1",
+    "@tanstack/vue-query": "^5.81.5",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/passport-local": "^1.0.38",
-    "axios": "^1.7.9",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "cally": "^0.8.0",
-    "caniuse-lite": "^1.0.30001707",
-    "chart.js": "^4.4.7",
+    "caniuse-lite": "^1.0.30001726",
+    "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.2",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "~4.21.2",
@@ -66,26 +66,26 @@
     "passport-local": "^1.0.0",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "^19.0.6",
-    "primereact": "^10.9.4",
-    "primevue": "^4.3.4",
+    "primeng": "^19.1.3",
+    "primereact": "^10.9.6",
+    "primevue": "^4.3.6",
     "react": "18.3.1",
-    "react-day-picker": "^9.6.4",
+    "react-day-picker": "^9.7.0",
     "react-dom": "18.3.1",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "~7.8.1",
+    "rxjs": "~7.8.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.8.1",
     "vite-plugin-electron": "^0.29.0",
-    "vue": "^3.5.13",
+    "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.0",
-    "zod": "^3.24.2",
-    "zone.js": "~0.15.0",
-    "zustand": "^5.0.3"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.73",
+    "zone.js": "~0.15.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.7",
@@ -97,14 +97,14 @@
     "@angular/cli": "~19.0.7",
     "@angular/compiler-cli": "~19.0.7",
     "@angular/language-service": "~19.0.7",
-    "@angular/pwa": "^19.1.7",
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
+    "@angular/pwa": "^19.2.15",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/eslintrc": "^2.1.4",
     "@eslint/js": "~8.57.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.15",
+    "@nestjs/testing": "^10.4.19",
     "@nx/cypress": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
@@ -119,10 +119,10 @@
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
     "@schematics/angular": "~19.0.7",
-    "@swc-node/register": "~1.10.9",
-    "@swc/cli": "~0.3.12",
+    "@swc-node/register": "~1.10.10",
+    "@swc/cli": "~0.3.14",
     "@swc/core": "~1.10.18",
-    "@swc/helpers": "~0.5.15",
+    "@swc/helpers": "~0.5.17",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/express": "5.0.0",
@@ -132,53 +132,53 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "@typescript-eslint/utils": "^8.24.1",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@typescript-eslint/utils": "^8.35.1",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/coverage-v8": "^2.1.9",
     "@vitest/ui": "^2.1.9",
     "@vue/eslint-config-prettier": "10.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.6",
-    "angular-eslint": "^19.1.0",
-    "autoprefixer": "^10.4.20",
+    "angular-eslint": "^19.8.1",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "cypress": "^13.17.0",
-    "electron": "^33.4.1",
+    "electron": "^33.4.11",
     "electron-builder": "^25.1.8",
     "eslint": "~9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^9.33.0",
     "handlebars": "^4.7.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jsdom": "~25.0.1",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
     "nx": "20.3.0",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.1",
-    "prisma": "^6.5.0",
-    "react-hook-form": "^7.54.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prisma": "^6.11.1",
+    "react-hook-form": "^7.59.0",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.4.0",
     "ts-node": "10.9.2",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.24.1",
-    "verdaccio": "^5.0.4",
-    "vite": "^6.1.0",
+    "typescript-eslint": "^8.35.1",
+    "verdaccio": "^5.33.0",
+    "vite": "^6.3.5",
     "vite-plugin-dts": "~4.3.0",
     "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^2.1.9",
-    "vue-tsc": "^2.2.2",
+    "vue-tsc": "^2.2.12",
     "webpack-cli": "^5.1.4"
   },
   "trustedDependencies": [
