--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.11.1",
     "react-hook-form": "^7.59.0",
+    "sitemap": "^8.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.2",
