--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,22 +1,19 @@
-# --- Build Stage ---
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY ../../package.json ../../bun.lockb ./
-COPY ../../nx.json ../../workspace.json* ../../project.json* ./
-COPY ../../tsconfig.base.json ./
-COPY ../../libs ./libs
-COPY . .
-RUN bun install --frozen-lockfile
-RUN bunx nx build api --configuration=production
+# Stage 1: Build
+FROM node:lts-alpine AS builder
 
-# --- Run Stage ---
-FROM node:20-alpine
-WORKDIR /app
-COPY --from=builder /app/dist/apps/api ./dist
-COPY --from=builder /app/apps/api/prisma ./prisma
-COPY --from=builder /app/apps/api/package.json ./package.json
-COPY --from=builder /app/apps/api/node_modules ./node_modules
-COPY --from=builder /app/apps/api/.env* ./
-COPY --from=builder /app/apps/api/src/assets ./dist/assets
-ENV NODE_ENV=production
-CMD ["node", "dist/main.js"]
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN bun install
+COPY . .
+RUN bunx nx run yourNestAppName:build:production
+
+# Stage 2: Production
+FROM node:lts-alpine
+ENV NODE_ENV production
+
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN bun install
+COPY --from=builder /usr/src/app/dist/apps/api ./build
+
+CMD ["node", "build/main.js"]
