Updated api Dockerfile

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -5,9 +5,9 @@ FROM node:lts-alpine AS builder
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN bun install
+RUN bun install --frozen-lockfile
 COPY . .
-RUN bunx nx run yourNestAppName:build:production
+RUN bunx nx run api:build:production
 
 # Stage 2: Production
 FROM node:lts-alpine
@@ -15,7 +15,7 @@ ENV NODE_ENV production
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN bun install
+RUN bun install --frozen-lockfile
 COPY --from=builder /usr/src/app/dist/apps/api ./build
 
-CMD ["node", "build/main.js"]
+CMD ["bun", "build/main.js"]
