Added basehref to project.json

--- a/apps/client-web/project.json
+++ b/apps/client-web/project.json
@@ -5,6 +5,7 @@
   "prefix": "app",
   "sourceRoot": "apps/client-web/src",
   "tags": ["scope:client-web", "type:app"],
+  "baseHref": "/",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
