--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "prisma": "^6.11.1",
     "react-hook-form": "^7.59.0",
     "sitemap": "^8.0.0",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.2",
